Fix alignment for '/competitions'.

--- a/src/components/competitions/competition-card.module.scss
+++ b/src/components/competitions/competition-card.module.scss
@@ -18,3 +18,12 @@
   max-width: 100%;
   line-height: 0;
 }
+
+.cardContent {
+  text-align: center;
+}
+
+.title {
+  font-size: 19px;
+  white-space: pre-line;
+}
